--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/itsmeadriana/Enumerating-Employees#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "inquirer": "^8.2.0",
     "jest": "^27.3.1",
     "mysql2": "^2.3.2"
   }
